--- a/frontend/package.json
+++ b/frontend/package.json
@@ -47,6 +47,9 @@
     "preview": "vite preview",
     "test": "jest",
     "test:watch": "jest --watch",
+    "test:coverage": "jest --coverage --watchAll=false",
+    "test:performance": "node scripts/performance-test.js",
+    "type-check": "tsc --noEmit",
     "lint": "eslint src --ext .ts,.tsx",
     "lint:fix": "eslint src --ext .ts,.tsx --fix",
     "format": "prettier --write src/**/*.{ts,tsx,css,md}"
