--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -254,7 +254,7 @@ jobs:
     name: Code Quality
     runs-on: ubuntu-latest
     needs: [backend-tests, frontend-tests]
-    if: ${{ vars.SONAR_TOKEN != '' || secrets.SONAR_TOKEN != '' }}
+    if: ${{ secrets.SONAR_TOKEN != '' }}
     continue-on-error: true
 
     steps:
@@ -329,7 +329,7 @@ jobs:
     name: Code Quality (Fallback)
     runs-on: ubuntu-latest
     needs: [backend-tests, frontend-tests]
-    if: ${{ vars.SONAR_TOKEN == '' && secrets.SONAR_TOKEN == '' }}
+    if: ${{ secrets.SONAR_TOKEN == '' }}
 
     steps:
     - name: Checkout code
