fix: update deprecated CodeQL Action from v2 to v3
- Updated github/codeql-action/upload-sarif from @v2 to @v3 in all workflow files
- Added continue-on-error: true for better error handling
- Fixed SARIF file upload issues in security-scan.yml
- Added missing frontend SARIF upload in security-scan.yml

This resolves the deprecation warnings and improves CI reliability.

--- a/.github/workflows/cd-staging.yml
+++ b/.github/workflows/cd-staging.yml
@@ -76,7 +76,8 @@ jobs:
         output: 'frontend-trivy-results.sarif'
 
     - name: Upload Trivy scan results
-      uses: github/codeql-action/upload-sarif@v2
+      uses: github/codeql-action/upload-sarif@v3
+      continue-on-error: true
       if: always()
       with:
         sarif_file: 'backend-trivy-results.sarif'
