--- a/.github/workflows/cd-production.yml
+++ b/.github/workflows/cd-production.yml
@@ -82,7 +82,8 @@ jobs:
         severity: 'CRITICAL,HIGH'
 
     - name: Upload security scan results
-      uses: github/codeql-action/upload-sarif@v2
+      uses: github/codeql-action/upload-sarif@v3
+      continue-on-error: true
       if: always()
       with:
         sarif_file: 'backend-security-scan.sarif'
