--- a/.github/workflows/cd-staging.yml
+++ b/.github/workflows/cd-staging.yml
@@ -78,7 +78,7 @@ jobs:
     - name: Upload Trivy scan results
       uses: github/codeql-action/upload-sarif@v3
       continue-on-error: true
-      if: always()
+      if: always() && hashFiles('backend-trivy-results.sarif') != ''
       with:
         sarif_file: 'backend-trivy-results.sarif'
 
