--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -48,7 +48,7 @@ structlog==23.2.0
 sentry-sdk==1.38.0
 ddtrace==2.5.0
 
-# Testing
+# Testing dependencies
 pytest==7.4.3
 pytest-asyncio==0.21.1
 pytest-cov==4.1.0
