fix: enable automatic requirements.txt fixing in CI workflow
- Added --fix flag to validate-requirements.py call in CI
- This ensures that any corrupted requirements files are automatically fixed during CI
- Should resolve persistent pytest-cov==0.4.4 errors in Dependabot PRs

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -63,8 +63,8 @@ jobs:
         python -m pip install --upgrade pip
         if [ -f requirements.txt ]; then
           echo "📦 Installing from requirements.txt..."
-          # Validate requirements.txt first
-          python ../scripts/validate-requirements.py requirements.txt || echo "⚠️ Requirements validation failed, continuing anyway"
+          # Validate and fix requirements.txt first
+          python ../scripts/validate-requirements.py requirements.txt --fix || echo "⚠️ Requirements validation/fix failed, continuing anyway"
           
           # Install with retry logic
           if ! pip install -r requirements.txt; then
